fixed z-index issue for multiple models search results
--HG--
branch : IE

--- a/app/themes/default/less/newui.less
+++ b/app/themes/default/less/newui.less
@@ -4368,6 +4368,8 @@ div.hasHalfs{
 
 /*=Search Results - Mixed Search Results*/
 #MixedModelsSearchView{
+    position:relative;
+    z-index:5;
     h1{
         margin-bottom:15px;
     }
@@ -4377,6 +4379,8 @@ div.hasHalfs{
 }
 
 #MixedModelsMultipleListsView{
+    position:relative;
+    z-index:1;
     margin-top:15px;
     h1{
         margin-bottom: 15px;
